Add contact routes and enhance contact page functionality with email sending feature

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,7 +4,36 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Talkapi</title>
+
+    <!-- Primary Meta Tags -->
+    <title>TalkAPI - AI-Powered API Documentation to Code | Powered by Anthropic Claude</title>
+    <meta name="title" content="TalkAPI - AI-Powered API Documentation to Code" />
+    <meta name="description" content="Transform API documentation into ready-to-use code instantly. Paste docs, ask questions in plain language, get JavaScript, Python, and cURL code. Powered by Anthropic Claude AI." />
+    <meta name="keywords" content="API, documentation, code generator, Anthropic Claude, AI, developer tools, REST API, API testing, code snippets, JavaScript, Python, cURL" />
+    <meta name="author" content="TalkAPI" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://talkapi.ai/" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://talkapi.ai/" />
+    <meta property="og:title" content="TalkAPI - AI-Powered API Documentation to Code" />
+    <meta property="og:description" content="Transform API documentation into ready-to-use code instantly. Powered by Anthropic Claude AI." />
+    <meta property="og:image" content="https://talkapi.ai/og-image.png" />
+    <meta property="og:site_name" content="TalkAPI" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://talkapi.ai/" />
+    <meta property="twitter:title" content="TalkAPI - AI-Powered API Documentation to Code" />
+    <meta property="twitter:description" content="Transform API documentation into ready-to-use code instantly. Powered by Anthropic Claude AI." />
+    <meta property="twitter:image" content="https://talkapi.ai/og-image.png" />
+
+    <!-- Additional SEO -->
+    <meta name="theme-color" content="#0F172A" />
+    <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
   </head>
   <body>
     <div id="root"></div>
