--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary Meta Tags -->
-    <title>TalkAPI - AI-Powered API Documentation to Code | Powered by Anthropic Claude</title>
+    <title>TalkAPI - AI-Powered API Documentation to Code</title>
     <meta name="title" content="TalkAPI - AI-Powered API Documentation to Code" />
-    <meta name="description" content="Transform API documentation into ready-to-use code instantly. Paste docs, ask questions in plain language, get JavaScript, Python, and cURL code. Powered by Anthropic Claude AI." />
+    <meta name="description" content="Transform API documentation into ready-to-use code instantly. Paste docs, ask questions in plain language, get JavaScript, Python, and cURL code." />
     <meta name="keywords" content="API, documentation, code generator, Anthropic Claude, AI, developer tools, REST API, API testing, code snippets, JavaScript, Python, cURL" />
     <meta name="author" content="TalkAPI" />
     <meta name="robots" content="index, follow" />
@@ -20,7 +20,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://talkapi.ai/" />
     <meta property="og:title" content="TalkAPI - AI-Powered API Documentation to Code" />
-    <meta property="og:description" content="Transform API documentation into ready-to-use code instantly. Powered by Anthropic Claude AI." />
+    <meta property="og:description" content="Transform API documentation into ready-to-use code instantly. Ask questions in plain language and get JavaScript, Python, and cURL code." />
     <meta property="og:image" content="https://talkapi.ai/og-image.png" />
     <meta property="og:site_name" content="TalkAPI" />
 
@@ -28,7 +28,7 @@
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://talkapi.ai/" />
     <meta property="twitter:title" content="TalkAPI - AI-Powered API Documentation to Code" />
-    <meta property="twitter:description" content="Transform API documentation into ready-to-use code instantly. Powered by Anthropic Claude AI." />
+    <meta property="twitter:description" content="Transform API documentation into ready-to-use code instantly. Ask questions in plain language and get JavaScript, Python, and cURL code." />
     <meta property="twitter:image" content="https://talkapi.ai/og-image.png" />
 
     <!-- Additional SEO -->
