Add Google Analytics tracking code to index.html for improved user behavior analysis and site performance monitoring.

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -5,6 +5,16 @@
     <link rel="icon" type="image/svg+xml" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DL2KF04XLX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-DL2KF04XLX');
+    </script>
+
     <!-- Primary Meta Tags -->
     <title>TalkAPI - AI-Powered API Documentation to Code</title>
     <meta name="title" content="TalkAPI - AI-Powered API Documentation to Code" />
