Enhance subscription update functionality in SupabaseManager to include customizable limits and improved error handling. Update payment service unit prices for subscriptions. Revise frontend legal page to include a new cookie policy and update terms. Integrate cookie consent management in layout and remove obsolete test API URL utility.

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -5,14 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DL2KF04XLX"></script>
+    <!-- Google Analytics will be loaded by Cookie Consent system -->
+    <!-- This ensures GDPR/CCPA compliance by only loading after user consent -->
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-DL2KF04XLX');
+      // Google Analytics is managed by the cookie consent system
+      // It will load automatically if user has given consent
+      // See: src/utils/cookieConsent.js
     </script>
 
     <!-- Primary Meta Tags -->
